Add image dHash/pHash signature Add calculate dHash/pHash hamming between two images